--- a/css/style.css
+++ b/css/style.css
@@ -360,96 +360,6 @@ body{
     color: rgb(255, 255, 255);
   }
   
-  /* .ctaText a {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    outline: none;
-    border: 0;
-    vertical-align: middle;
-    text-decoration: none;
-    background: transparent;
-    padding: 0;
-    font-size: inherit;
-    font-family: inherit;
-    color: rgb(255, 255, 255);
-   }
-   
-   .ctaText a.learn-more {
-    width: 12rem;
-    height: auto;
-   }
-   
-   .ctaText a.learn-more .circle {
-    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-    position: relative;
-    display: block;
-    margin: 0;
-    width: 3rem;
-    height: 3rem;
-    background: #282936;
-    border-radius: 1.625rem;
-   }
-   
-   .ctaText a.learn-more .circle .icon {
-    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    background: #fff;
-   }
-   
-   .ctaText a.learn-more .circle .icon.arrow {
-    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-    left: 0.625rem;
-    width: 1.125rem;
-    height: 0.125rem;
-    background: none;
-   }
-   
-   .ctaText a.learn-more .circle .icon.arrow::before {
-    position: absolute;
-    content: "";
-    top: -0.29rem;
-    right: 0.0625rem;
-    width: 0.625rem;
-    height: 0.625rem;
-    border-top: 0.125rem solid #fff;
-    border-right: 0.125rem solid #fff;
-    transform: rotate(45deg);
-   }
-   
-   .ctaText a.learn-more .button-text {
-    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding: 0.75rem 0;
-    margin: 0 0 0 1.85rem;
-    color: #282936; 
-    font-weight: 700;
-    line-height: 1.6;
-    text-align: center;
-    text-transform: uppercase;
-   }
-   
-   .ctaText a:hover .circle {
-    width: 100%;
-   }
-   
-   .ctaText a:hover .circle .icon.arrow {
-    background: #fff;
-    transform: translate(1rem, 0);
-   }
-   
-   .ctaText a:hover .button-text {
-    color: #fff;
-   }
-  
-    */
 
 /*bg*/
 /*txt*/
@@ -673,4 +583,58 @@ body{
     justify-content: center;
     padding: 2rem;
     background-image: linear-gradient(to bottom, #051937, #041634, #031432, #03102f, #030c2d);
+  }
+
+  
+  @media(max-width:800px){
+    .htextContainer h1{
+      font-size: 5rem;
+    }
+    .introText{
+      padding: 2rem;
+      margin-bottom: 1rem;
+    }
+    .introText h2{
+      font-size: 2rem;
+    }
+    .introText p{
+      font-size: 1.75rem;
+    }
+    .infoContainer{
+      flex-direction: column;
+    }
+    .infoTextWrapper{
+      padding-bottom: 2rem;
+    }
+    .infoContainer .logo {
+      height: auto;
+      width: auto;
+      margin: 4rem auto -4rem;
+      transform: rotate(270deg);
+  }
+  .infoContainer .logo img {
+    box-shadow: -25px 0 150px 3px rgba(0, 0, 0, 0.6);
+}
+  .infoTextHeading{
+    text-align: center;
+    margin-left: 0rem!important;
+   
+  }
+  .infoText{
+    text-align: center;
+  }
+  .callToAction{
+         margin: 0rem;
+  }
+  .growthImg{
+    display: none;
+  }
+  .learn-more{
+    display: grid;
+    place-items: center;
+    text-decoration: none;
+  }
+  #whitepaper{
+    margin: 0;
+  }
   }
