--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,9 @@ body{
     padding: 8rem 7rem;
     text-align: center;
     font-size: 2rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 45%;
 }
 .introText h2{
     color: white;
@@ -110,10 +113,21 @@ body{
     align-items: center;
     justify-content: center;
     gap: 8rem;
-    background-image: linear-gradient(to left, #ff7200, #f07000, #e26e00, #d46b00, #c66800);
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: #ff4e00;
+    background-image: linear-gradient(315deg, #ec6905 0%, #ff4e00 80%);
+    background-size: 1000% 1000%;
+
+    animation: AnimationName 2s ease infinite;
   }
+
+  
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
 
   .infoContainer .logo{
     height: 20rem;
@@ -591,8 +605,7 @@ body{
       font-size: 5rem;
     }
     .introText{
-      padding: 2rem;
-      margin-bottom: 1rem;
+      padding: 3rem 2rem;
     }
     .introText h2{
       font-size: 2rem;
@@ -625,9 +638,11 @@ body{
   }
   .callToAction{
          margin: 0rem;
+         flex-direction: column;
   }
   .growthImg{
-    display: none;
+    margin: 2rem 0 -2rem;
+    width: auto;
   }
   .learn-more{
     display: grid;
