--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ body{
     padding: 8rem 7rem;
     text-align: center;
     font-size: 2rem;
+    background-image: url("../images/intro-bg.svg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 45%;
@@ -99,10 +100,12 @@ body{
   @keyframes slide-up {
     0% {
       opacity: 0;
+      color: #ffe1cf;
       transform: translateY(100px);
     }
     100% {
         opacity: 1;
+        color: #ff5e00c1;
       transform: translateY(0);
     }
   }
@@ -133,7 +136,6 @@ body{
     height: 20rem;
     width: 100rem;
     margin: 6rem 0 6rem 4rem;
-    transform: rotate(270deg);
   }
   .infoContainer .logo img{
     height: 20rem;
@@ -623,7 +625,6 @@ body{
       height: auto;
       width: auto;
       margin: 4rem auto -4rem;
-      transform: rotate(270deg);
   }
   .infoContainer .logo img {
     box-shadow: -25px 0 150px 3px rgba(0, 0, 0, 0.6);
