--- a/css/featuresCard.css
+++ b/css/featuresCard.css
@@ -193,3 +193,11 @@
         flex-direction: column;
     }
   }
+
+  @media (max-width:321px) {
+    .f-card {
+      overflow: visible;
+      width: 315px;
+      height: 400px;
+    }
+  }
