--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro&family=Alata&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@100&display=swap');
 *,::after,::before {
   margin: 0;
   padding: 0;
@@ -44,167 +43,68 @@ button{
 
 /* styling for navbar starts */
 
-.container{
-  margin-left: 5%;
-  margin-right: 5%;
-}
-
 /* Navbar section */
 
 .nav{
   width: 100%;
   height: 65px;
   position: fixed;
-  line-height: 65px;
-  text-align: center;
-  background-color: #000000a8;
   background-color: transparent;
   z-index: 5;
-  font-family: 'Archivo', sans-serif;
-  /* backdrop-filter: blur(3px); */
-}
-
-.nav div.logo{
-  width: 180px;
-  height: 10px;
-  position: absolute;
-}
-
-.nav div.logo a{
-  text-decoration: none;
-  color: #fff;
-  font-size: 1.8em;
-  text-transform: uppercase;
-  font-family: "Blanka-Regular",sans-serif;
-}
-
-.nav div.logo a:hover {
-  color: #c0c0c0;
-}
-
-.nav div.main_list{
-  float: right;
-}
-
-.nav div.main_list ul{
-  width:100%;
-  height: 65px;
   display: flex;
-  list-style: none;
+  align-items: center;
+  justify-content: left;
+  gap: 2rem;
 }
 
-.nav div.main_list ul li{
-  width: 120px;
-  height: 65px;
-}
-
-.nav div.main_list ul li a{
-  text-decoration: none;
-  color: #fff;
-  line-height: 65px;
-  text-transform: uppercase;
-}
-
-.nav div.main_list ul li a:hover{
-  color: #c0c0c0;
-  position: relative;
-}
-
-
-.nav div.main_list ul li a::before, .nav div.main_list ul li a::after{
+.nav .nav-bg {
   content: '';
   position: absolute;
-  left: 0;
-  background-color: #fff;
-  height: 2px;
-  transform: scaleX(0);
-  transition: transform 0.3s ease-in-out;
-}
-
-.nav div.main_list ul li a::before{
-  top: -3px;
-  transform-origin: right;
-}
-
-.nav div.main_list ul li a::after{
-  bottom: -3px;
-  transform-origin: left;
-}
-
-.nav div.main_list ul li a:hover::after,.nav div.main_list ul li a:hover::before{
-  transform: scaleX(1);
+  inset: 0;
   width: 100%;
+  height: 65px;
+  background-color: #000000a8;
+  -webkit-backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px);
+  z-index: -1;
 }
 
-.nav div.media_button {
-  width: 40px;
-  height: 40px;
-  background-color: transparent;
-  position: absolute;
-  right: 15px;
-  top: 12px;
+.nav .logo a{
+  font-family: 'Blanka', sans-serif;
+  text-decoration: none;
+  font-size: 2rem;
+  margin-left: 1.8rem;
+}
+
+.nav .links{
+display: flex;
+align-items: center;
+justify-content: space-around;
+font-size: 1.4rem;
+gap: 2rem;
+font-family: 'Archive', sans-serif;
+padding-top: 0.5rem;
+}
+
+.nav .links span a{
+  text-decoration: none;
+  /* color: #fff3eb;
+  color: #676767; */
+  padding: 0;
+  transition: 0.3s ease-in-out;
+}
+
+.nav .links span a:hover{
+  /* border-bottom: 5px solid #e4e4e4; */
+  color: #d6d6d6;
+  transition: all 0.3s ease-in;
+}
+
+.toggle_btn{
+  color: #fff3eb;
   display: none;
 }
-
-.nav div.media_button button.main_media_button {
-  width: 100%;
-  height: 100%;
-  background-color: transparent;;
-  outline: 0;
-  border: none;
-  cursor: pointer;
-}
-
-.nav div.media_button button.main_media_button span{
-  width: 98%;
-  height: 1px;
-  display: block;
-  background-color: #fff;
-  margin-top: 9px;
-  margin-bottom: 10px;
-}
-
-.nav div.media_button button.main_media_button:hover span:nth-of-type(1){
-  transform: rotateY(180deg);
-  transition: all 0.5s;
-  background-color: #c0c0c0;
-}
-
-.nav div.media_button button.main_media_button:hover span:nth-of-type(2){
-  transform: rotateY(180deg);
-  transition: all 0.4s;
-  background-color: #c0c0c0;
-}
-
-.nav div.media_button button.main_media_button:hover span:nth-of-type(3){
-  transform: rotateY(180deg);
-  transition: all 0.3s;
-  background-color: #c0c0c0;
-}
-
-.nav div.media_button button.active span:nth-of-type(1) {
-  transform: rotate3d(0, 0, 1, 45deg);
-  position: absolute;
-  margin: 0;
-}
-
-.nav div.media_button button.active span:nth-of-type(2) {
-  display: none;
-}
-
-.nav div.media_button button.active span:nth-of-type(3) {
-  transform: rotate3d(0, 0, 1, -45deg);
-  position: absolute;
-  margin: 0;
-}
-
-.nav div.media_button button.active:hover span:nth-of-type(1) {
-  transform: rotate3d(0, 0, 1, 45deg);
-}
-
-.nav div.media_button button.active:hover span:nth-of-type(3) {
-  transform: rotate3d(0, 0, 1, -45deg);
-}
+/*styling for navbar ends*/
 
 /* Home section */
 
@@ -214,70 +114,65 @@ button{
   background-color: #ddd;
 }
 
-/* Media qurey section */
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  
-  .container{
-      margin: 0;
-  }
-  
-}
+/* Media query section */
 
 
 
 
 @media screen and (max-width:768px) {
-  
-  .container{
-      margin: 0;
-  }
-  
-  .nav div.logo{
-      margin-left: 15px;
-  }
-  
-  .nav div.main_list{
-      width: 100%;
-      margin-top: 65px;
-      height: 0px;
-      overflow: hidden;
-  }
-  
-  .nav div.show_list{
-      height: 200px;
-      background-color:#00000098;  
-  }
-  
-  .nav div.main_list ul{
-      flex-direction: column;
-      width: 100%;
-      height: 200px;
-      top: 80px;
-      right: 0;
-      left: 0;
 
+  .nav .links{
+    position: relative;
+    font-size: 1.3rem;
   }
-  
-  .nav div.main_list ul li{
-      width: 100%;
-      height: 40px;
-      /* background-color:#000000a8; */
 
-  }
-  
-  .nav div.main_list ul li a{
-    text-align: center;
-      line-height: 40px;
-      width: 100%;
-      height: 40px;
-      display: table;
-  }
-  
-  .nav div.media_button{
-      display: flex;
-  }
 }
+
+@media screen and (max-width:426px) {
+  .toggle_btn{
+    display: inline;
+    position: absolute;
+    right: 2rem;
+    font-size: 1.7rem;
+  }
+  .nav .links{
+    position: absolute;
+    left: 50%;
+    /* visibility: hidden; */
+    transform: translateX(-50%);
+    font-size: 1.3rem;
+    flex-direction: column;
+    /* top: 5.615rem; */
+    opacity: 0;
+    top: -17rem;
+    z-index: 2;
+    transition: 0.3s ease-in-out;
+  }
+
+  .nav .links.linksPos{
+    top: 5.615rem;
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
+  }
+
+  .nav .links + .links-bg{
+    position: absolute;
+    top: 4rem;
+    height: 0;
+    width: 110vw;
+    background-color: #000000a8;
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+    z-index: -1;
+    transition: height 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  .nav .links + .links-bg.open{
+    height: 48vh;
+  }
+
+}
+
 /*styling for navbar ends*/
 
 /*styling for hero section starts*/
@@ -336,117 +231,13 @@ button{
 }
 
 @font-face {
-  font-family: Blanka-Regular;
+  font-family: Blanka;
   src: url(../fonts/Blanka-Regular.otf);
 }
 
-.htextContainer h1 {
-  /* letter-spacing: 5px; */
-  /* color: #ff5e00c1; */
-  font-family: 'Blanka-Regular', sans-serif;
-}
-.htextContainer #first{
-display: inline;
-font-size: 18rem;
-filter: drop-shadow(0 0 25px #ff5e00);
-color: #ffa064;
-}
-.htextContainer #text{
-  display: inline;
-  position: relative;
-  font-size: 8rem;
-  left: -3rem;
-  top: 3rem;
-  letter-spacing: -5px;
-  color: #ff6300;
-  z-index: -1;
-  text-shadow: 5px 5px #ff62005f;
-}
-
-.htextContainer #text::after{
-  position: absolute;
-  content: '';
-  width: 160%;
-  height: 5px;
-  background-color:#FAD4AB;
-  bottom: 2rem;
-  left: -10rem;
-  z-index: -1;
-}
-
-#arrow-end{
-  position: relative;
-  left: 2rem;
-  -webkit-animation-delay: 0.5s;
-  animation-delay: 0.5s;
-}
-
-#arrow-end::before{
-  position: absolute;
-  display: inline-block;
-  content: '';
-  width: 18px;
-  height: 4px;
-  background-color: #FAD4AB;
-  font-size: 2rem;
-  top: 6.5rem;
-  right: 3rem;
-  top: 102px;
-  right: 50px;
-  z-index: 2;
-  transform: rotate(45deg);
-  border-radius: 3px;
-}
-
-#arrow-end::after{
-  position: absolute;
-  display: inline-block;
-  content: '';
-  width: 18px;
-  height: 4px;
-  background-color: #FAD4AB;
-  font-size: 2rem;
-  top: 7.5rem;
-  right: 3rem;
-  top: 113px;
-  right: 50px;
-  z-index: 2;
-  transform: rotate(-45deg);
-  border-radius: 3px;
-}
-
-.htextContainer h1 {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  white-space: nowrap;
-  margin: 0;
-  line-height: 150%;
-  font-family: 'Blanka-Regular',sans-serif;
-}
-
-.htextContainer h1 {
-  -webkit-animation-delay: 0.5s;
-  animation-delay: 0.5s;
-}
-
-.slide-up {
-  -webkit-animation: slide-up 1.2s cubic-bezier(0.65, 0, 0.35, 1) both;
-  animation: slide-up 1.2s cubic-bezier(0.65, 0, 0.35, 1) both;
-}
-
-@keyframes slide-up {
-  0% {
-    opacity: 0;
-    /* color: #ffe1cf; */
-    transform: translateY(100px);
-  }
-
-  100% {
-    opacity: 1;
-    /* color: #ff5e00; */
-    transform: translateY(0);
-  }
+@font-face {
+  font-family: Archive;
+  src: url(../fonts/Archive.otf);
 }
 
 
@@ -545,6 +336,10 @@ color: #ffa064;
   color: white;
   margin-left: 2rem;
   font-size: 2rem;
+}
+
+.infoTextHeading h1{
+  font-size: 3rem;
 }
 
 .infoContainer .infoTextWrapper .infoText {
@@ -830,7 +625,7 @@ svg#freepik_stories-bitcoin-p2p:not(.animated) .animable {opacity: 0;}svg#freepi
 
 .buttonsCta button:hover p:before {
   top: -50%;
-  transform: rotate(5deg);
+  transform: rotate(3deg);
 }
 
 .buttonsCta button:hover p:after {
@@ -1007,6 +802,81 @@ margin: -1rem auto 1rem;
 
 /*styling for features section ends*/
 
+
+/*styling for roadmap section*/
+.main-title{
+  width:100%;
+  text-align:center;
+  color:#ffffff;
+  font-size: 2.5rem;
+  margin: 3rem auto 1rem;
+}
+.swiper-container{
+  width: 100%;
+  padding: 50px 0;
+}
+
+  .rSlide{
+    border-radius:20px;
+    color:white;
+    backdrop-filter:blur(10px);
+    border: double 1px transparent;
+    border-radius: 30px;
+    background-image: linear-gradient(#ad54006b, #c074036b), 
+                    linear-gradient(to right, #c5910073, #be550075);
+                    /* background-color: #ff4e00; */
+                    background-image: linear-gradient(315deg, #ff4d0090 0%, #ec9f0597 74%);
+                   
+  }
+  
+.slide-container{
+  padding:20px 30px;
+  margin-bottom: auto;
+  border-radius: 30px;
+}
+
+.slide-container ul{
+  margin:0;
+  padding:0;
+}
+.slide-container ul li{
+  padding:0;
+}
+  .section-rmap{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-height: 50vh;
+    overflow: hidden;
+    padding: 0 30rem;
+  }
+
+  .swiper-container{
+      width: 100%;
+      padding: 50px 0;
+  }
+
+  .swiper-slide{
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+    filter: blur(3px);
+  }
+
+  .swiper-slide-active{
+    filter: blur(0px);
+  }
+
+
+  .swiper-3d .swiper-slide-shadow-left, .swiper-3d .swiper-slide-shadow-right {
+    background-image: none!important;
+}
+/*styling for roadmap section*/
+
+
 /*styling for faq section starts*/
 
 /* Style the buttons that are used to open and close the accordion panel */
@@ -1126,7 +996,11 @@ footer .social-links .links a:hover{
 
 }
 
-
+@media(max-width:1025px){
+  .section-rmap{
+    padding: 0  20rem;
+  }
+}
 @media(max-width:800px) {
   .htextContainer h1 {
     font-size: 5rem;
@@ -1152,10 +1026,10 @@ footer .social-links .links a:hover{
     padding-bottom: 2rem;
   }
   .infoContainer .bg-video .num-video{
-    height: 176vh;
+    height: 181vh;
   }
   .infoContainer .bg-video::after{
-    height: 176vh;
+    height: 181vh;
   }
   
   
@@ -1208,6 +1082,10 @@ footer .social-links .links a:hover{
     background: linear-gradient(51deg, rgba(0,4,116,1) 35%, rgba(255,123,0,1) 100%);
     transition: 0.4s ease-in-out;
   }
+
+  .section-rmap{
+    padding: 0 10rem;
+  }
 }
 
 @media(max-width:426px){
@@ -1215,6 +1093,21 @@ footer .social-links .links a:hover{
   width: 300px;
   height: 300px;
   object-fit: cover;
+}
+.slider{
+  height: 250px;
+  overflow: auto;
+}
+.hero{
+  flex-direction: column;
+}
+#hero-video1, #hero-video2{
+  width: 100vw!important;
+  height: 50vh!important;
+  object-fit: cover;
+}
+.section-rmap{
+  padding: 0 1rem;
 }
 }
 
