--- a/css/style.css
+++ b/css/style.css
@@ -1074,6 +1074,7 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
   place-content: center;
+
 }
 
 .partner.wallet h3:first-child{
@@ -1103,7 +1104,7 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
 }
 
 .partner{
-  height:300px;
+  height:180px;
   width:300px;
   /* border: 2px dotted silver; */
   border-radius: 10px;
@@ -1115,11 +1116,13 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
   place-items: center;
   position: relative;
   left: 2rem;
+
 }
 
 .partner h3{
   color: white;
   font-size: 1.5rem;
+  font-family: 'Alata'!important;
 }
 
 .partner a{
@@ -1127,8 +1130,8 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
 }
 
 .partner .partnerLogo{
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   object-fit: cover;
   cursor: pointer;
 }
