--- a/css/style.css
+++ b/css/style.css
@@ -157,13 +157,12 @@ button {
 
 
 
-@media screen and (max-width:768px) {
+@media (max-width:769px) {
 
   .nav .links {
     position: relative;
     font-size: 1.3rem;
   }
-
 }
 
 @media screen and (max-width:426px) {
@@ -332,7 +331,7 @@ button {
 
 .infoContainer .bg-video::after {
   content: '';
-  height: 80vh;
+  height: 85vh;
   width: 100vw;
   inset: 0;
   background-color: #00000072;
@@ -343,7 +342,7 @@ button {
 
 .infoContainer .bg-video .num-video {
   object-fit: cover;
-  height: 80vh;
+  height: 85vh;
   width: 100vw;
 }
 
@@ -1061,15 +1060,14 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
 } */
 
 .faqSection{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  position: relative;
+  display: grid;
+  grid-template-areas: "partner1 faq partner2";
+  place-content: center;
+  margin-top: -2rem;
 }
 
 .partner.wallet{
-  left: unset;
-  right: 2rem;
+  grid-area: partner2;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
@@ -1079,7 +1077,6 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
 
 .partner.wallet h3:first-child{
   text-align: center;
-  grid-column: 1/2;
 }
 
 .partner.wallet .wrapper{
@@ -1104,8 +1101,9 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
 }
 
 .partner{
+  grid-area: partner1;
   height:180px;
-  width:300px;
+  /* width:300px; */
   /* border: 2px dotted silver; */
   border-radius: 10px;
   /* position: absolute;
@@ -1114,8 +1112,7 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
   /* flex-direction: column;
   justify-content: space-evenly; */
   place-items: center;
-  position: relative;
-  left: 2rem;
+  margin-top: 50%;
 
 }
 
@@ -1139,6 +1136,7 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
 
 
 .faqContainer {
+  grid-area: faq;
   width: 80%;
   max-width: 600px;
   margin: 50px auto;
@@ -1192,6 +1190,7 @@ button.accordion.is-open {
   color: #e3e3e3;
   font-weight: lighter;
   padding: 1rem;
+  word-break: break-word;
 }
 
 /*styling for faq section ends*/
@@ -1250,18 +1249,13 @@ footer .social-links .links a:hover {
   .section-rmap {
     padding: 0 20rem;
   }
-  .faqSection{
-    padding-bottom: 400px;
+  .infoContainer .bg-video::after {
+    height: 93vh;
   }
-  .partner.wallet{
-    position: absolute;
-    top:48%;
-    left: 50%;
-  }
-  .partner{
-    position: absolute;
-    top:50%;
-    left: 20%;
+  
+  
+  .infoContainer .bg-video .num-video {
+    height: 93vh;
   }
 }
 
@@ -1286,18 +1280,18 @@ footer .social-links .links a:hover {
     flex-direction: column;
   }
 
+  .infoContainer .bg-video::after {
+    height: inherit;
+  }
+  
+  
+  .infoContainer .bg-video .num-video {
+    height: inherit;
+  }
+
   .infoTextWrapper {
     padding-bottom: 2rem;
   }
-
-  .infoContainer .bg-video .num-video {
-    height: 165vh;
-  }
-
-  .infoContainer .bg-video::after {
-    height: 165vh;
-  }
-
 
   .infoContainer .logo {
     height: auto;
@@ -1354,6 +1348,17 @@ footer .social-links .links a:hover {
   .section-rmap {
     padding: 0 10rem;
   }
+  .faqSection{
+    display: grid;
+    grid-template-areas: "faq faq"
+                          "partner1 partner2";
+    place-content: center;
+    margin-top: -2rem;
+  }
+  .partner{
+    margin-top: 0%;
+  }
+
 }
 
 @media(max-width:426px) {
@@ -1389,22 +1394,21 @@ footer .social-links .links a:hover {
   .section-rmap {
     padding: 0 1rem;
   }
-  .faqSection{
+  /* .faqSection{
     padding-bottom: 580px;
-  }
-  .partner.wallet{
-    position: absolute;
-    top:63%;
-    left: 14%;
-    grid-template-rows: 111px 73px;
-  }
-  .partner{
-    position: absolute;
-    top:37%;
-    left: 14%;
+  } */
+  .faqSection{
+    display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 111px 73px;
+grid-template-areas:  "faq"
+                      "partner1"
+                      "partner2";
   }
+
+  .partner{
+    margin-top: 0%;
+  }
+
 }
 
 
@@ -1413,12 +1417,5 @@ footer .social-links .links a:hover {
     width: 290px;
     height: 290px;
     object-fit: cover;
-  }
-  .partner.wallet{
-    left: 10%;
-  }
-  .partner{
-    left: 10%;
-    top: 40%;
   }
 }
