--- a/css/style.css
+++ b/css/style.css
@@ -324,8 +324,13 @@ button {
   z-index: 2;
 }
 
-.infoContainer .bg-video {
+.infoContainer .info-bg-video {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   z-index: -1;
 }
 
@@ -340,10 +345,9 @@ button {
 }
 
 
-.infoContainer .bg-video .num-video {
-  object-fit: cover;
-  height: 85vh;
-  width: 100vw;
+.infoContainer .info-bg-video .num-video {
+  width: 100%;
+  height: auto;
 }
 
 /* 
@@ -1280,13 +1284,10 @@ footer .social-links .links a:hover {
     flex-direction: column;
   }
 
-  .infoContainer .bg-video::after {
-    height: inherit;
-  }
-  
-  
-  .infoContainer .bg-video .num-video {
-    height: inherit;
+
+  .infoContainer .info-bg-video .num-video {
+    width: auto;
+    /* height: auto; */
   }
 
   .infoTextWrapper {
