--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ button {
   gap: 2rem;
   font-family: 'Archive', sans-serif;
   padding-top: 0.5rem;
+  margin-left: -0.5rem;
 }
 
 .nav .links span a {
@@ -348,8 +349,8 @@ button {
 }
 
 .info-logo {
-  width: 23rem;
-  height: 23rem;
+  width: 20rem;
+  height: 20rem;
   border-radius: 50%;
   box-shadow: 0 30px 100px 3px rgba(0, 0, 0, 0.498);
   /* Additional styling for the logo */
@@ -1062,7 +1063,7 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
   width: 100%;
   min-height: 50vh;
   overflow: hidden;
-  padding: 0 30rem;
+  padding: 0rem 20rem;
 }
 
 .swiper-container {
@@ -1287,7 +1288,33 @@ footer .social-links .links a:hover {
 
 }
 
+@media (max-width:1440px){
+  /*media queries to keep the nav links part only in half of the screen width*/
+
+  .nav .logo a {
+    font-size: 1.6rem;
+    margin-left: 1rem;
+  }
+  
+  .nav .links {
+    font-size: 1.3rem;
+    gap: 0.8rem;
+    margin-left: -0.5rem;
+  }
+}
+
 @media(max-width:1025px) {
+  .nav .logo a {
+    font-size: 1.6rem;
+    margin-left: 0.5rem;
+  }
+  
+  .nav .links {
+    font-size: 1.15rem;
+    gap: 0.7rem;
+    margin-left: -1.2rem;
+}
+  
   .section-rmap {
     padding: 0 20rem;
   }
@@ -1389,6 +1416,16 @@ footer .social-links .links a:hover {
 }
 
 @media(max-width:426px) {
+  .nav .logo a {
+    font-size: 2rem;
+    margin-left: 1rem;
+  }
+  
+  .nav .links {
+    font-size: 1.3rem;
+    gap: 2rem;
+    margin-left: 0;
+}
   .hero .coin img {
     width: 300px;
     height: 300px;
