--- a/css/style.css
+++ b/css/style.css
@@ -884,6 +884,48 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
   outline: 0;
 }
 
+.copy-button {
+  padding: 6px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #ff5e00;
+  color: white;
+  transition: background-color 0.3s ease;
+}
+
+.copy-button i {
+  margin-right: 5px;
+}
+
+.copy-button.copied {
+  background-color: #ffffff;
+  color: #000;
+}
+
+/* #btnMobile{
+  display: none;
+} */
+
+
+  /* Styles for the image overlay */
+  #imageOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+
+  #imageOverlay img {
+    max-width: 80%;
+    max-height: 80%;
+  }
 /* Tooltip container */
 .tooltip {
   position: relative;
@@ -1412,6 +1454,14 @@ footer .social-links .links a:hover {
   .partner{
     margin-top: 0%;
   }
+
+  /* #btnMobile{
+    display: flex;
+  }
+
+  #btnDesktop{
+    display: none;
+  } */
 
 }
 
