--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ button {
   padding: 8rem 7rem;
   text-align: center;
   font-size: 2rem;
-  background-image: linear-gradient(to right, #000000a2, #00000072), url("https://images.pexels.com/photos/4402272/pexels-photo-4402272.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-image: linear-gradient(to right, #000000a2, #00000072), url("../images/intro-bg.webp");
   /* background-image: linear-gradient(to right, #000000a2, #00000072),url("https://images.pexels.com/photos/720254/pexels-photo-720254.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"); */
   background-size: cover;
   background-repeat: no-repeat;
