--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,27 @@ body {
   overflow-x: hidden;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 9px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #000000e0;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ff7300;
+  /* border-radius: 5px; */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 h1,
 h2,
 h3,
