--- a/css/style.css
+++ b/css/style.css
@@ -698,7 +698,7 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
   }
 }
 
-.growthImg svg {
+.growthImg img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -1560,6 +1560,9 @@ footer .social-links .links a:hover {
   .infoContainer .bg-video .num-video {
     height: 93vh;
   }
+  .btnContainer{
+    width: 108%;
+  }
 }
 
 @media(max-width:800px) {
@@ -1600,6 +1603,10 @@ footer .social-links .links a:hover {
   }
   .text-content p{
     padding-bottom: 1.5rem;
+  }
+  .ucWrapper{
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3,1fr);
   }
   .callToAction {
     margin: 0rem;
