--- a/css/community.css
+++ b/css/community.css
@@ -253,9 +253,7 @@ button {
   /* background-image: url("https://images.pexels.com/photos/247676/pexels-photo-247676.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
   background-image: url('https://images.pexels.com/photos/10756669/pexels-photo-10756669.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
   background-image: url('https://images.pexels.com/photos/3374938/pexels-photo-3374938.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-  background-image: url('https://images.pexels.com/photos/1679719/pexels-photo-1679719.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-   background-repeat: no-repeat;
-  background-size: cover;  */
+  background-image: url('https://images.pexels.com/photos/1679719/pexels-photo-1679719.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); */
   position: relative;
   /* transform: translateY(-100%); */
   height: 100vh;
@@ -330,7 +328,7 @@ margin: 0;
 .hero-img img{
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  display:flex;
   /* overflow: hidden; */
 }
 
@@ -438,7 +436,8 @@ margin: 0;
   font-size: 2rem;
   background-image: linear-gradient(to right, #000000a2, #00000072),url("https://images.pexels.com/photos/720254/pexels-photo-720254.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   background-image: linear-gradient(to right, #000000a2, #00000072), url("https://images.pexels.com/photos/585759/pexels-photo-585759.jpeg?auto=compress&cs=tinysrgb&w=600");
-  background-image: linear-gradient(to right, #000000c3, #0000004a), url("/images/galaxyc.jpg");
+  background-image: linear-gradient(to right, #00000087, #00000036), url("/images/trails.jpg");
+  background-image: linear-gradient(to right, #00000087, #00000036), url("https://static.vecteezy.com/system/resources/previews/007/696/703/large_2x/abstract-circle-light-neon-effect-illustration-free-vector.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -541,17 +540,32 @@ margin: 0;
   padding: 2rem 0;
   height: 150vh;
   position: relative;
-  background-image: url('/images/trails-bg-2.jpg');
-  background-image: linear-gradient(to right, #00000079, #00000054), url("https://static.vecteezy.com/system/resources/previews/000/518/632/non_2x/vector-abstract-black-luxury-texture-silk-background-and-cloth-wave.jpg");
+  /* background-image: linear-gradient(to right, #00000079, #00000054), url("https://static.vecteezy.com/system/resources/previews/000/518/632/non_2x/vector-abstract-black-luxury-texture-silk-background-and-cloth-wave.jpg");
   background-image: linear-gradient(to right, #00000079, #00000054), url("https://static.vecteezy.com/system/resources/previews/007/105/010/non_2x/luxury-abstract-background-with-golden-and-black-shapes-metal-texture-steel-background-vactor-design-illustration-free-vector.jpg");
-  background-image: radial-gradient(#00000041, #000000b2), url("/images/galaxyc-1.jpg");
+  background-image: url('/images/trails-bg-2.jpg');*/
+  background-image: radial-gradient(#00000041, #000000b2), url("/images/galaxyc-1.jpg"); 
+  background-image: radial-gradient(#00000011, #000000b6), url("https://images.pexels.com/photos/16218757/pexels-photo-16218757/free-photo-of-blowing-twisted-smoke-and-fire.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"); 
+  background-image: url("https://images.pexels.com/photos/942560/pexels-photo-942560.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"); 
   background-color: white;
-  /* background-attachment: fixed; */
+  background-attachment: fixed;
   background-size: cover;
-  background-position-y: 90%;
+  background-position-y: 20%;
 /* background-position-x: -200px;
 background-position-y: -150px; */
 background-repeat: no-repeat;
+}
+
+.our-work::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  background-color: #00000050;
+  backdrop-filter: blur(4px);
+  z-index: 1;
 }
 
 .our-work h2{
@@ -567,10 +581,11 @@ background-repeat: no-repeat;
   border-radius: 50%;
   height: 250px;
   width: 250px;
+  color: rgb(0, 0, 0);
   color: white;
   text-align: center;
   letter-spacing: 3px;
-  border: 1px solid white;
+  border: 1px solid rgb(255, 255, 255);
 }
 
 
@@ -579,16 +594,87 @@ background-repeat: no-repeat;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 200px;
-  border: 2px dashed white;
+  width: 400px;
+  /* border: 2px dashed white; */
   border-radius: 10px;
   position: absolute;
+  z-index: 2;
 }
+
+
+.our-work .work-card {
+  position: absolute;
+  overflow: hidden;
+  border-radius: 10px;
+  width: 300px;
+}
+
+.work-card-content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 20px 20px 2rem 20px;
+  color: #fff;
+  /* background: linear-gradient(to top, rgb(0, 0, 0, 0.9), rgba(0, 0, 0, 0)); */
+  background-image: linear-gradient(to top,
+    rgba(0, 0, 0, 1.0) 0%, 
+    rgba(0, 0, 0, 0.9) 10%,
+    rgba(0, 0, 0, 0.8) 20%,
+    rgba(0, 0, 0, 0.7) 30%,
+    rgba(0, 0, 0, 0.6) 40%,
+    rgba(0, 0, 0, 0.5) 50%,
+    rgba(0, 0, 0, 0.4) 60%,
+    rgba(0, 0, 0, 0.3) 70%,
+    rgba(0, 0, 0, 0.2) 80%,
+    rgba(0, 0, 0, 0.1) 90%,
+    rgba(0, 0, 0, 0.0) 100%);
+  transition: all 0.3s;
+  transform: translateY(67%);
+}
+
+.work-card:hover{
+  transform: translateY(-10px);
+  box-shadow: 0 0 150 10px #00000096;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.work-card:hover .work-card-content{
+
+  transform: translateY(0%);
+}
+
+.story-card-content h2 {
+  font-size: 2rem;
+  margin-top: 5rem;
+  margin-bottom: -1.4rem;
+  text-align: left;
+}
+
+.story-card-content p {
+  font-size: 1rem;
+}
+
+
+.story-card:hover{
+  cursor: pointer;
+}
+
+.story-card:hover .story-card-image img {
+  transform: scale(1.2);
+}
+
+.story-card:hover .story-card-content {
+  opacity: 1;
+}
+
 .work-card .heading h5{
 color: white;
-text-decoration: underline;
+/* text-decoration: underline;
 text-decoration-skip-ink: auto;
-text-underline-offset: 5px;
+text-underline-offset: 5px; */
+text-align: center;
 font-size: 1.3rem;
 margin: 0.8rem 0;
 }
@@ -599,34 +685,70 @@ margin: 0.8rem 0;
   line-height: 1.2;
   margin: 0.7rem 0.3rem;
   }
+  .our-work .work-card{
+    position: absolute;
+  }
+  .our-work h2{
+    position: absolute;
+    border-radius: 50%;
+    height: 250px;
+    width: 250px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    letter-spacing: 3px;
+    border: 1px solid rgb(255, 255, 255);
+    z-index: 2;
+    
+  }
+
+ .our-work .work-card{
+  border-radius: 10px;
+  width: 210px;
+  height: 260px;
+  background-size: cover;
+  z-index: 2;
+ }
+ .work-card .work-card-content{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+ }
   #work-card-1{
 /* position: absolute; */
-left: 25%;
-top: 13%;
+left: 23%;
+top: 7%;
+background-image: url('https://cdn.pixabay.com/photo/2015/07/28/22/05/child-865116_1280.jpg');
   }
   #work-card-2{
     /* position: absolute; */
     left: 3%;
     top: 39%;
+    background-image: url('https://images.unsplash.com/photo-1593113646773-028c64a8f1b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80');
   }
   #work-card-3{
     /* position: absolute; */
-    left: 25%;
-    top: 63%;
+    left: 23%;
+    top: 65%;
+    background-image: url('https://cdn.pixabay.com/photo/2020/05/31/04/36/investment-5241253_1280.jpg');
   }
   #work-card-4{
     /* position: absolute; */
-    right: 25%;
-    top: 13%;
+    right: 23%;
+    top: 7%;
+    background-image: url('https://images.unsplash.com/photo-1536856136534-bb679c52a9aa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80');
   }
   #work-card-5{
     /* position: absolute; */
     right: 3%;
     top: 39%;
+    background-image: url('https://images.pexels.com/photos/8447849/pexels-photo-8447849.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
   }
   #work-card-6{
-    right: 20%;
-    top: 63%;
+    right: 22%;
+    top: 65%;
+    background-image: url('https://feeds.abplive.com/onecms/images/uploaded-images/2023/01/10/6ff39e745960f1866d3ed28ad5f4bcee1673323824525369_original.jpg?impolicy=abp_cdn&imwidth=720');
   }
   .blink-in{
   opacity: 1;
@@ -635,7 +757,8 @@ top: 13%;
 
 /*styling for story section starts*/
 .story-container{
-  height: 100vh;
+  /* height: 100vh; */
+  padding: 2rem 0;
 }
 .story-container h2{
   text-align: center;
@@ -2160,6 +2283,9 @@ flex-direction: column;
   }
 
   .hero {
+    background-image: url('../images/hero-1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover; 
     position: relative;
     /* transform: translateY(-100%); */
     height: 100vh;
@@ -2168,7 +2294,7 @@ flex-direction: column;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr;
     animation-timing-function: linear;
-    /* background-position-y: -100%; */
+    background-position-x: 85%;
     /* display: grid;
     place-items: center;
     justify-content: center; */
@@ -2180,8 +2306,8 @@ flex-direction: column;
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: #00000056;
-    z-index: -1;
+    background-color: #00000042;
+    z-index: 2;
   }
   
   .htext-wrapper {
@@ -2236,7 +2362,7 @@ flex-direction: column;
   
   .hero-img{
     height: 100vh;
-    width: 100vw;
+    width: 50vw;
     position: absolute;
     left: 0;
     top: 0;
@@ -2294,13 +2420,22 @@ flex-direction: column;
   }
 
   .our-work h2{
+    position: static;
     top: 10%;
+         transform: translate(0%,0%);
   }
 .our-work{
-  
-  background-attachment: fixed;
-  background-image: linear-gradient(to right, #000000c3, #0000004a), url("../images/galaxyc-2.jpg");
-  height: 400vh;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  background-position-x: 30%;
+}
+
+.our-work .work-card{
+  position: static;
 }
   #work-card-1{
     /* position: absolute; */
