--- a/css/community.css
+++ b/css/community.css
@@ -49,6 +49,7 @@ body {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #ff7300;
+  background: #d8b55b;
   /* border-radius: 5px; */
 }
 
@@ -287,14 +288,7 @@ button {
   position: relative;
 }
 
-.htext-img img{
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: -1;
-  height: 100%;
-  width: 100%;
-}
+
 
 #htext {
   /* position: absolute;
@@ -302,7 +296,7 @@ button {
   left: 50%;
   transform: translateX(-50%); */
   font-size: 2.5rem;
-  margin-top: 17%;
+  margin-top: 26%;
   width: 100%;
   display: inline-block;
   text-align: center;
@@ -317,7 +311,23 @@ color: #d8b55b;
 font-size: 3rem;
 font-family: 'Alata',sans-serif;
 display: inline-block;
-margin: 0;
+margin-bottom: 30%;
+}
+.htext-img{
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 50vw;
+}
+.htext-img img{
+  /* position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1; */
+  height: 100%;
+  width: 100%;
 }
 
 .hero-img{
@@ -328,7 +338,8 @@ margin: 0;
 .hero-img img{
   height: 100%;
   width: 100%;
-  display:flex;
+  /* display:flex; */
+  object-fit: cover;
   /* overflow: hidden; */
 }
 
@@ -438,31 +449,49 @@ margin: 0;
   background-image: linear-gradient(to right, #000000a2, #00000072), url("https://images.pexels.com/photos/585759/pexels-photo-585759.jpeg?auto=compress&cs=tinysrgb&w=600");
   background-image: linear-gradient(to right, #00000087, #00000036), url("https://static.vecteezy.com/system/resources/previews/007/696/703/large_2x/abstract-circle-light-neon-effect-illustration-free-vector.jpg");
   background-image: linear-gradient(to right, #00000087, #00000036), url("/images/trails.jpg");
-  background-image: linear-gradient(to right, #00000087, #00000036), url("https://images.pexels.com/photos/1679719/pexels-photo-1679719.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  background-image: linear-gradient(to right, #00000087, #00000036), url("https://w0.peakpx.com/wallpaper/214/1022/HD-wallpaper-abstract-dark-abstract-dark.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 45%;
   height: 80vh;
   display: flex;
   align-items: center;
+  position: relative;
+}
+
+.introText::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  background-color: #00000050;
+  backdrop-filter: blur(2px);
+  z-index: 1;
 }
 
 .introText h2 {
+  position: relative;
   color: white;
   padding: 2rem 0;
   text-align: center;
   font-size: 4rem;
   margin-right: 2rem;
   line-height: 5rem;
+  z-index: 3;
 }
 
 .introText p {
+  position: relative;
   color: white;
   padding: 2rem 0;
   text-align: center;
   font-size: 1.3rem;
   width: 100%;
   line-height: 2rem;
+  z-index: 3;
 }
 
 /*styling for intro section ends*/
@@ -535,35 +564,40 @@ margin: 0;
 /*styling for Our Work section starts*/
 .our-work {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem 0;
-  height: 150vh;
+ padding: 2rem 0; 
+ height: auto;
+  height: 70vh;
   position: relative;
   /* background-image: linear-gradient(to right, #00000079, #00000054), url("https://static.vecteezy.com/system/resources/previews/000/518/632/non_2x/vector-abstract-black-luxury-texture-silk-background-and-cloth-wave.jpg");
   background-image: linear-gradient(to right, #00000079, #00000054), url("https://static.vecteezy.com/system/resources/previews/007/105/010/non_2x/luxury-abstract-background-with-golden-and-black-shapes-metal-texture-steel-background-vactor-design-illustration-free-vector.jpg");
   background-image: url('/images/trails-bg-2.jpg');*/
-  background-image: radial-gradient(#00000041, #000000b2), url("/images/galaxyc-1.jpg"); 
+  /* background-image: radial-gradient(#00000041, #000000b2), url("/images/galaxyc-1.jpg"); 
   background-image: radial-gradient(#00000011, #000000b6), url("https://images.pexels.com/photos/16218757/pexels-photo-16218757/free-photo-of-blowing-twisted-smoke-and-fire.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"); 
   background-image: url("https://images.pexels.com/photos/942560/pexels-photo-942560.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"); 
-  background-color: white;
+  background-image: url("https://img.freepik.com/free-vector/seamless-gold-rhombus-grid-pattern-black-background_53876-97589.jpg?w=1060&t=st=1689327002~exp=1689327602~hmac=293219e0fcbbbb5ddd8611e3ae537fce9850c52fad3a9d36399165b575197a28");  */
+  background-attachment: fixed;
+  background-color: rgba(0, 0, 0, 0);
   background-size: cover;
   background-position-y: 20%;
 /* background-position-x: -200px;
 background-position-y: -150px; */
 background-repeat: no-repeat;
 }
+.bondedSection{
+  position: relative;
+  background-size: cover;background-repeat: no-repeat;
+}
 
-.our-work::after{
-  content: '';
+.bondedSection::after{
+  /* content: ''; */
   position: absolute;
   left: 0;
   top: 0;
   display: inline-block;
   height: 100%;
   width: 100%;
-  background-color: #00000050;
-  backdrop-filter: blur(4px);
+  background-color: #000000;
+  backdrop-filter: blur(1px);
   z-index: 1;
 }
 
@@ -572,22 +606,56 @@ background-repeat: no-repeat;
   right: 50%;
   top: 50%;
   transform: translate(50%,-50%); */
-  display: grid;
-  place-items: center;
-  padding: 1rem;
-  font-size: 3rem;
+  font-size: 2rem;
   /* margin-bottom: 2rem; */
-  border-radius: 50%;
-  height: 250px;
-  width: 250px;
-  color: rgb(0, 0, 0);
-  color: white;
+  /* border-radius: 50%;   */
   text-align: center;
   letter-spacing: 3px;
-  border: 1px solid rgb(255, 255, 255);
+  /* position: absolute; */
+  /* border-radius: 50%; */
+  height: 250px;
+  width: 250px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  letter-spacing: 3px;
+  /* border: 1px solid rgb(255, 255, 255); */
+  /* z-index: 2; */
+  /* border: 1px solid rgb(255, 255, 255); */
 }
-
-
+.work-text-wrapper{
+  position: absolute;
+  width: 50vw;
+  left: 2rem;
+  top: 18%;
+}
+.work-text-wrapper .highlight{
+color: #d8b55b;
+}
+.work-text-wrapper .heading h5{
+  color: white;
+  font-size: 2.8rem;
+}
+.work-text-wrapper .text p{
+  color: white;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  line-height: 1.5;
+}
+.work-card-wrapper{
+  position: absolute;
+  right: 4%;
+    width: 344px;
+    height: 344px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* margin-left: 66%; */
+    margin-left: -50%;
+    overflow: hidden;
+    padding: 3rem 4rem;
+    /* box-shadow: inset -10px -10px 150px 4px #000000; */
+}
+/* 
 
 .work-card-grid{
   position: absolute;
@@ -611,7 +679,7 @@ background-repeat: no-repeat;
   grid-row-gap: 1rem;
   z-index: 2;
   width: 90%;
-  /* margin: 1rem 2rem; */
+  margin: 1rem 2rem;
   }
   
   .work-card-grid h2 { grid-area: 2 / 3 / 3 / 4; }
@@ -620,7 +688,7 @@ background-repeat: no-repeat;
   #work-card-3 { grid-area: 3 / 2 / 4 / 3; }
   #work-card-4 { grid-area: 1 / 4 / 2 / 5; }
   #work-card-5 { grid-area: 2 / 5 / 3 / 6; }
-  #work-card-6 { grid-area: 3 / 4 / 4 / 5; }
+  #work-card-6 { grid-area: 3 / 4 / 4 / 5; } */
 
 .work-card-content {
   position: absolute;
@@ -630,8 +698,7 @@ background-repeat: no-repeat;
   height: 100%;
   padding: 20px 20px 2rem 20px;
   color: #fff;
-  /* background: linear-gradient(to top, rgb(0, 0, 0, 0.9), rgba(0, 0, 0, 0)); */
-  background-image: linear-gradient(to top,
+  /* background-image: linear-gradient(to top,
     rgba(0, 0, 0, 1.0) 0%, 
     rgba(0, 0, 0, 0.9) 10%,
     rgba(0, 0, 0, 0.8) 20%,
@@ -642,17 +709,17 @@ background-repeat: no-repeat;
     rgba(0, 0, 0, 0.3) 70%,
     rgba(0, 0, 0, 0.2) 80%,
     rgba(0, 0, 0, 0.1) 90%,
-    rgba(0, 0, 0, 0.0) 100%);
+    rgba(0, 0, 0, 0.0) 100%); */
     background-image: linear-gradient(to top,
     rgba(0, 0, 0, 1.0) 0%, 
     rgba(0, 0, 0, 0.9) 10%,
     rgba(0, 0, 0, 0.8) 20%,
     rgba(0, 0, 0, 0.7) 30%,
     rgba(0, 0, 0, 0.7) 40%,
-    rgba(0, 0, 0, 0.7) 50%,
+    rgba(0, 0, 0, 0.6) 50%,
     rgba(0, 0, 0, 0.5) 60%,
-    rgba(0, 0, 0, 0.3) 70%,
-    rgba(0, 0, 0, 0.2) 80%,
+    rgba(0, 0, 0, 0.5) 70%,
+    rgba(0, 0, 0, 0.4) 80%,
     rgba(0, 0, 0, 0.1) 90%,
     rgba(0, 0, 0, 0.0) 100%);
   transition: all 0.3s;
@@ -686,18 +753,7 @@ margin: 0.8rem 0;
   line-height: 1.2;
   margin: 0.7rem 0rem;
   }
-  .our-work h2{
-    position: absolute;
-    border-radius: 50%;
-    height: 250px;
-    width: 250px;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    letter-spacing: 3px;
-    border: 1px solid rgb(255, 255, 255);
-    z-index: 2;
-    
-  }
+
 
  .our-work .work-card{
   border-radius: 10px;
@@ -925,19 +981,34 @@ justify-content: space-around;
 .current-work{
   display: flex;
   gap: 2rem;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
+  justify-content: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  flex-direction: row-reverse;
+}
+.related-img-mob{
+  display: none;
 }
 
 .current-work .heading h2{
-  color: white;
+  color: #d8b55b;
   margin: 2rem 0 0;
   font-size: 3rem;
+  text-align: center;
+}
+
+.current-work .sub-heading h2{
+  color: #f6f6f6;
+  margin: 2rem 0 0;
+  font-size: 2rem;
+  text-align: center;
 }
 
 .current-work .work-text{
-  margin: 0 20% 1rem;
-  color: white;
+  /* margin: 0 20% 1rem; */
+  color: #f6f6f6;
 }
 .current-work .work-text p{
   font-size: 1.1rem;
@@ -945,10 +1016,19 @@ line-height: 1.7;
 margin-top: 1rem;
 }
 
+.story-text-container{
+  display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 0.5rem;
+    margin: 0rem 3rem 4rem;
+}
+
 
 .current-work .related-img{
-  width: 80%;
-  height: 250px;
+  width: 100%;
+  height: 300px;
   overflow: hidden;
 }
 
@@ -956,8 +1036,8 @@ margin-top: 1rem;
   width:100%;
   height: 100%;
   object-fit: cover;
-  border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 /*styling for current-work section ends*/
@@ -1852,7 +1932,7 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
   background-size: cover;
   width: 300px;
   height: 300px;
-  filter: blur(3px);
+  filter: blur(1.5px);
 }
 
 .swiper-slide-active {
@@ -2159,7 +2239,7 @@ footer .social-links .links a:hover {
   }
 
   .introText p {
-    font-size: 1rem;
+    font-size: 1.1rem;
     margin-top: -2rem;
     margin-bottom: 0rem;
   }
@@ -2205,7 +2285,7 @@ footer .social-links .links a:hover {
     width: auto;
   }
   .current-work .work-text {
-    margin: 0 5% 1rem;
+    margin: 0 3% 1rem;
     color: white;
 }
 .story-container{
@@ -2291,9 +2371,9 @@ flex-direction: column;
   }
 
   .hero {
-    background-image: url('../images/hero-1.jpg');
-    background-size: contain; 
-    background-repeat: no-repeat;
+    /* background-image: url('../images/hero-1.jpg'); */
+    /* background-size: contain; 
+    background-repeat: no-repeat; */
     position: relative;
     /* transform: translateY(20%); */
     height: 100vh;
@@ -2322,14 +2402,29 @@ flex-direction: column;
     /* position: absolute; */
     width: 100%;
     height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-direction: column;
-    padding-top: 1.8rem;
+    flex-direction: column; */
+    /* padding-top: 1.8rem; */
     z-index: 3;
+    padding: 6rem 0;
+    row-gap: 1.3rem;
   }
+
+  .htext-img {
+    position: static;
+    height: 50vh;
+    width: 100vw;
+    aspect-ratio: 1/1;
+}
+.htext-img img {
+  position: static;
+  display: block;
+  object-fit: cover;
+  aspect-ratio: 1/1;
+}
   
   .htext-container {
     width: 100%;
@@ -2343,12 +2438,13 @@ flex-direction: column;
   }
   
   .htext-img img{
-    display: none;
+    position: static;
+    display: block;
   }
   
   #htext {
-    font-size: 2rem;
-    margin-top: 13%;
+    font-size: 1.8rem;
+    margin-top: 10%;
     width: 100%;
     display: inline-block;
     text-align: center;
@@ -2362,7 +2458,7 @@ flex-direction: column;
   
   .htext-wrapper #highlight{
   color: #d8b55b;
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   font-family: 'Alata',sans-serif;
   display: inline-block;
   position: relative;
@@ -2372,21 +2468,9 @@ flex-direction: column;
   }
   
   .hero-img{
-    height: 100vh;
-    width: 50vw;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: -1;
     display: none;
   }
-  
-  .hero-img img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    /* overflow: hidden; */
-  }
+
   
   /* #htext::after{
     content:'';
@@ -2408,21 +2492,29 @@ flex-direction: column;
     top: 2rem;
   } */
 
-  .ucWrapper {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(6, 1fr);
-    place-items: center;
-    place-content: center;
+  .current-work{
+    flex-direction: column;
+    position: relative;
   }
-
-  .ucCard {
-    width: 20rem;
+  .related-img-mob{
+    display: block;
+    width: 100%;  
+    height: 300px;
+    overflow: hidden;
   }
-
-  .section-rmap {
-    padding: 0 1rem;
+  .current-work .related-img-mob img{
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
   }
-
+  
+  .related-img{
+    display: none;
+  }
+  .story-text-container {
+    margin: 0rem 1rem 4rem;
+}
   .btnContainer {
     flex-direction: column;
     align-items: unset;
@@ -2451,28 +2543,15 @@ flex-direction: column;
   width: 250px;
   width: 250px;
 }
-.work-card .heading h5{
-  margin: -0.2rem 0 1rem;
+.work-text-wrapper{
+  position: relative;
+  width: 80vw;
+  left: 0;
 }
-.work-card-grid {
-  position: static;
-  place-items: center;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(7, 1fr);
-  grid-row-gap: 1rem;
-  z-index: 2;
-  width: 90%;
-  /* margin: 1rem 2rem; */
-  }
-  
-  .work-card-grid h2 { grid-area: 1 / 1 / 2 / 2; }
-  #work-card-1 { grid-area: 2 / 1 / 3 / 2; }
-  #work-card-2{ grid-area: 3 / 1 / 4 / 2; }
-  #work-card-3 { grid-area: 4 / 1 / 5 / 2; }
-  #work-card-4 { grid-area: 5 / 1 / 6 / 2; }
-  #work-card-5 { grid-area: 6 / 1 / 7 / 2; }
-  #work-card-6 { grid-area: 7 / 1 / 8 / 2;  }
+.work-card-wrapper{
+  position: relative;
+  right: -25%;
+}
 
   /* .faqSection{
     padding-bottom: 580px;
