--- a/css/nav.css
+++ b/css/nav.css
@@ -104,11 +104,13 @@
   
   @media screen and (max-width:426px) {
     .toggle_btn {
-      display: inline;
+      /* display: inline; */
       position: absolute;
       right: 2rem;
       font-size: 1.7rem;
     }
+
+
   
     .nav .links {
       position: absolute;
